<?xml version="1.0"?>
<package format="2">
  <name>open_manipulator_description</name>
  <version>0.0.0</version>
  <description>open_manipulator_description package</description>

  <maintainer email="Matt@todo.todo">Matt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz</depend>
  <depend>gazebo</depend>

  <export>
   <architecture_independent />
  </export>
  
</package>
